--- a/test1.html
+++ b/test1.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      #container{
+        text-align : center;
+      }
+    </style>
   </head>
   <body>
-    <table border="1">
+    <!-- <table border="1">
       <tr>
-        <td rowspan="3"><img src="../nike_logo_thumbnail.png" alt="메롱" /></td>
+        <td rowspan="3"><img src="../logo.png" alt="메롱" /></td>
         <td><input type="text" placeholder="아이디" /></td>
         <td rowspan="2"><button>로그인</button></td>
       </tr>
@@ -18,6 +23,20 @@
       <tr>
         <td><input type="checkbox" />아이디 저장</td>
       </tr>
-    </table>
+    </table> -->
+    <div id="container">
+      <div id="image">
+        <img src="../logo.png" alt="이미지 없음">
+      </div>
+      <div id="id_pw">
+        <input type="text" placeholder="아이디">
+        <input type="password" placeholder="비밀번호">
+        <input type="checkbox">아이디 저장
+      </div>
+      <div id="login">
+        <button>로그인</button>
+      </div>
+    </div>
+
   </body>
 </html>
