--- a/test2.html
+++ b/test2.html
@@ -4,56 +4,136 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      body{
+        width: 960px;
+      }
+      #image{
+        border-bottom: 1px solid black;
+      }
+      #search_button{
+        float : left;
+        border-right: 1px solid black;
+        padding: 5px;
+        width: 80px;
+        height: 400px;
+      }
+      #right{
+        padding: 5px;
+      }
+      #select_box{
+        text-align: right;
+        margin: 5px;
+      }
+      .bookSearch_button{
+        padding: 5px 10px;
+      }
+      .searchButton{
+        background : white;
+        color: #bfbfbf;
+        border: 1px solid #bfbfbf;
+        padding: 5px 20px;
+      }
+
+      .viewButton{
+        border: 1px solid red;
+        color: red;
+        background: white;
+        padding: 5px 20px;
+      }
+
+      .borrowButton{
+        border: 1px solid blue;
+        color: blue;
+        background: white;
+        padding: 5px 20px;
+      }
+
+      table{
+        border-collapse : collapse;
+        border: 1px solid black;
+        margin : 0px auto;
+        table-layout: fixed;
+      }
+
+      .bookSearch{
+        width:750px;
+        padding: 5px;
+        margin: 5px;
+      }
+
+      td{
+        padding: 15px 10px;
+      }
+      tr > td:nth-child(1){
+        width:50px;
+      }
+      tr > td:nth-child(2){
+        width:450px;
+      }
+      tr > td:nth-child(3){
+        width:100px;
+      }
+      tr > td:nth-child(4){
+        width:100px;
+      }
+      tr > td:nth-child(5){
+        width:100px;
+      }
+
+      
+    </style>
   </head>
   <body>
-    <div>
+    <div id="container">
       <div id="image">
-        <img src="../nike_logo_thumbnail.png" alt="이미지" width="100px" />
+        <img src="../logo.png" alt="이미지" width="100px" height="50px"/>
       </div>
       <div id="search_button">
-        <input type="button" value="도서검색" />
+        <input type="button" value="도서검색" class="bookSearch_button">
       </div>
-      <div id="search">
-        <input type="text" size="60" placeholder="도서명 검색" />
-        <input type="button" value="검색" />
+      <div id="right">
+        <input type="text" size="60" placeholder="도서명 검색" class="bookSearch"/>
+        <input type="button" value="검색" class="searchButton">
+          <div id="select_box">
+            <label>정렬방식</label>
+            <select>
+              <option selected>선택하세요</option>
+              <option>도서명 오름차순</option>
+              <option>도서명 내림차순</option>
+            </select>
+          </div>
+        <table border="1">
+          <tr>
+            <td>1</td>
+            <td>도서명</td>
+            <td>대출중</td>
+            <td><button class="viewButton">보기</button></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>도서명</td>
+            <td>대출가능</td>
+            <td><button class="viewButton">보기</button></td>
+            <td><button class="borrowButton">대출</button></td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>도서명</td>
+            <td>대출가능</td>
+            <td><button class="viewButton">보기</button></td>
+            <td><button class="borrowButton">대출</button></td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>도서명</td>
+            <td>대출가능</td>
+            <td><button class="viewButton">보기</button></td>
+            <td><button class="borrowButton">대출</button></td>
+          </tr>
+        </table>
       </div>
-      <div id="select_box">
-        <label>정렬방식</label>
-        <select>
-          <option selected>선택하세요</option>
-          <option>도서명 오름차순</option>
-          <option>도서명 내림차순</option>
-        </select>
-      </div>
-      <table border="1">
-        <tr>
-          <td>1.</td>
-          <td>도서명</td>
-          <td>대출중</td>
-          <td><button>보기</button></td>
-        </tr>
-        <tr>
-          <td>2.</td>
-          <td>도서명</td>
-          <td>대출가능</td>
-          <td><button>보기</button></td>
-          <td><button>대출</button></td>
-        </tr>
-        <tr>
-          <td>3.</td>
-          <td>도서명</td>
-          <td>대출가능</td>
-          <td><button>보기</button></td>
-          <td><button>대출</button></td>
-        </tr>
-        <tr>
-          <td>4.</td>
-          <td>도서명</td>
-          <td>대출가능</td>
-          <td><button>보기</button></td>
-          <td><button>대출</button></td>
-        </tr>
-      </table>
     </div>
   </body>
 </html>
