--- a/test1.html
+++ b/test1.html
@@ -28,13 +28,15 @@
       <div id="image">
         <img src="../logo.png" alt="이미지 없음">
       </div>
-      <div id="id_pw">
-        <input type="text" placeholder="아이디">
-        <input type="password" placeholder="비밀번호">
-        <input type="checkbox">아이디 저장
-      </div>
-      <div id="login">
-        <button>로그인</button>
+      <div>
+        <div id="id_pw">
+          <input type="text" placeholder="아이디">
+          <input type="password" placeholder="비밀번호">
+          <input type="checkbox">아이디 저장
+        </div>
+        <div id="login">
+          <button>로그인</button>
+        </div>
       </div>
     </div>
 
