--- a/test1.html
+++ b/test1.html
@@ -5,40 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      #container{
-        text-align : center;
+      #box{
+        width: 99vw;
+        height: 98vh;
+        border:1px solid black;
+        display : grid;
+        grid-template-columns: 1fr;
+        place-items: center;
       }
+
+      #container{
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+        place-items: center;
+      }
+
+      #image{
+        display: grid;
+        place-items: center;
+        padding : 200px 50px 200px 150px;
+      }
+
+      #function{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 300px;
+      }
+
+      #id_pw input[type="text"]{padding-top : 5px; margin-bottom:5px;}
+      #id_pw input[type="password"]{ padding-top:5px; margin-bottom : 5px;}
+      #login .login{ padding : 17px; margin-left:10px;}
+      
+      img{
+        width:400px;
+        margin-top:85px;
+    }
+     
+
     </style>
   </head>
   <body>
-    <!-- <table border="1">
-      <tr>
-        <td rowspan="3"><img src="../logo.png" alt="메롱" /></td>
-        <td><input type="text" placeholder="아이디" /></td>
-        <td rowspan="2"><button>로그인</button></td>
-      </tr>
-      <tr>
-        <td><input type="password" placeholder="비밀번호" /></td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" />아이디 저장</td>
-      </tr>
-    </table> -->
+  <div id="box">
     <div id="container">
       <div id="image">
         <img src="../logo.png" alt="이미지 없음">
       </div>
-      <div>
+      <div id="function">
         <div id="id_pw">
-          <input type="text" placeholder="아이디">
-          <input type="password" placeholder="비밀번호">
-          <input type="checkbox">아이디 저장
+          <input type="text" placeholder="아이디" id="id">
+          <input type="password" placeholder="비밀번호" id="pw">
+          <input type="checkbox" id="check">아이디 저장
         </div>
         <div id="login">
-          <button>로그인</button>
+          <input type="submit" value="로그인" class="login">
         </div>
       </div>
     </div>
-
+  </div>
   </body>
 </html>
