--- a/korea.html
+++ b/korea.html
@@ -5,58 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<link rel="stylesheet" herf="style.css">
 <script src="korea.js"> </script>
 <style>
     #container{
+        margin: 100px auto 0 auto;
         text-align: center;
-        margin-top: 100px;
+        max-width: 400px;
+        
     }
 
-    .id_title{
-        margin-right: 270px;
-        margin-bottom: 0;
-    }
-    .id{
-        padding: 10px;
-        width: 300px;
-        border-radius: 5px;
-        border: 1px solid gainsboro;
+    div{
+        text-align: left;
     }
 
-    .pw_title{
-        margin-right: 250px;
-        margin-bottom: 0;
-    }
-    .pw{
-        padding: 10px;
-        width: 300px;
-        border-radius: 5px;
-        border: 1px solid gainsboro;
+    img{
+        width: 64px;
+        height: 64px;
     }
 
-    .name_title{
-        margin-right: 285px;
-        margin-bottom: 0;
-    }
-    .name{
-        padding: 10px;
-        width: 300px;
-        border-radius: 5px;
-        border: 1px solid gainsboro;
+    label{
+        display: block;
+        font-weight: bold;
+        margin-bottom: 5px;
     }
 
-    .email_title{
-        margin-right: 265px;
-        margin-bottom: 0;
+    input{
+        width: 100%;
+        padding: 13px;
+        border-radius: 4px;
+        border: 1px solid black;
     }
-    .email{
-        padding: 10px;
-        width: 300px;
-        border-radius: 5px;
-        border: 1px solid gainsboro;
+
+    small{
+        display: block;
+        margin-top : 5px;
+        margin-bottom: 20px;
+        color: gray;
     }
 
     .button{
+        margin-top: 20px;
         padding: 15px;
         width:320px;
         border-radius: 5px;
@@ -64,40 +53,37 @@
         color: white;
         border-style: none;
         font-size: 15px;
+        cursor: pointer;
     }
 </style>
 <body>
     <div id="container">
+        <a href="http://koreaisacademy.com/">
+            <img src="login_logo.jpg" alt="이미지" class="image">
+        </a>
+        <h1>PLEASE JOIN US</h1>
         <form>
-        <div id="image">
-            <img src="login_logo.jpg" alt="이미지" width="70px" class="image">
-        </div>
-        <h2>PLEASE JOIN US</h2>
-        <div id="id">
-            <h3 class="id_title">아이디</h3>
-            <label><input type="text" placeholder="아이디를 입력해 주세요" class="id"></label>
-            <br>
-            <div class="id_input">소문자/숫자 4자 이상을 입력해 주세요.</div>
-        </div>
-        <div id="pw">
-            <h3 class="pw_title">비밀번호</h3>
-            <label><input type="password" placeholder="비밀번호를 입력해 주세요" class="pw"></label>
-            <div class="pw_input">8~20자의 영문 대/소문자,숫자,특수문자를 사용하세요.</div>
-        </div>
-        <div id="name">
-            <h3 class="name_title">이름</h3>
-            <label><input type="text" placeholder="이름을 입력해 주세요" class="name"></label>
-            <div class="name_input"></div>
-        </div>
-        <div id="email">
-            <h3 class="email_title">이메일</h3>
-            <label><input type="email" placeholder="이메일을 입력해 주세요" class="email"></label>
-            <div class="email_input">이메일을 입력해주세요.</div>
-        </div>
-        <br><br>
-        <div id="buttonBox">
-            <input type="button" value="가입 완료하기" class="button">
-        </div>
+            <div id="id">
+                <label class="id_title">아이디</label>
+                <input type="text" placeholder="아이디를 입력해 주세요" class="id">
+                <small class="id_input">소문자/숫자 4자 이상을 입력해 주세요.</small>
+            </div>
+            <div id="pw">
+                <label class="pw_title">비밀번호</label>
+                <input type="password" placeholder="비밀번호를 입력해 주세요" class="pw">
+                <small class="pw_input">8~20자의 영문 대/소문자,숫자,특수문자를 사용하세요.</small>
+            </div>
+            <div id="name">
+                <label class="name_title">이름</label>
+                <input type="text" placeholder="이름을 입력해 주세요" class="name">
+                <small class="name_input">이름을 입력해 주세요.</small>
+            </div>
+            <div id="email">
+                <label class="email_title">이메일</label>
+                <input type="email" placeholder="이메일을 입력해 주세요" class="email">
+                <small class="email_input">이메일을 입력해주세요.</small>
+            </div>
+        <button type="submit" class="button">가입 완료하기</button>
         </form>
     </div>
 </body>
